# food-sonification

./: README.md
poetry-sound/: README.md  pyproject.toml
poetry-sound/src/poetry_sound/: main.ipynb  main.py
