[project]
name = "poetry-sound"
version = "0.1.0"
description = ""
authors = [
    {name = "jrsbm",email = "joris.boom@xs4all.nl"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "llvmlite (>=0.43.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_sound", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
